[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "radproc"
description = "radar data processing tools"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Jussi Tiira", email = "jussi.tiira@fmi.fi"},
]
keywords = ["meteorology", "weather radar", "precipitation"]
requires-python = ">=3.8"
dependencies = [
  "scipy",
  "pandas",
  "scikit-learn",
  "h5py",
  "click",
]
dynamic = ["version"]

[project.optional-dependencies]
ml = [
  "mba @ git+https://github.com/ddemidov/mba.git",
]
arm = [
  "arm_pyart",
]
mch = [
  #"pyart_mch",
  "pyart_mch @ git+https://github.com/MeteoSwiss/pyart.git",
]
dynamics = [
  "pysteps"
]

[project.scripts]
sulatiirain = "radproc.cli.sulatiirain:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/radproc/_version.py"

[tool.hatch.metadata]
allow-direct-references = true
